@@ -1567,6 +1567,9 @@ Extension Modules
 Tests
 -----
 
+- Issue #7312: Add a -F flag to run the selected tests in a loop until
+  a test fails.  Can be combined with -j.
+
 - Issue #7295: Do not use a hardcoded file name in test_tarfile.
 
 - Issue #7270: Add some dedicated unit tests for multi-thread synchronization
